log
Wed 24 Apr 2024 07:22:05 PM UTC: 
 tests:  0|6
total_score: 0/70
413d21c
Wed 24 Apr 2024 07:32:21 PM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
f0b454b
Wed 24 Apr 2024 07:38:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
327712e
Wed 24 Apr 2024 07:40:01 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
7e1fe25
Wed 24 Apr 2024 07:42:30 PM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:64:26: error: expected ‘;’ before ‘}’ token
   64 |     map->current=posicion
      |                          ^
      |                          ;
   65 | 
   66 |   }
      |   ~                       
Compilation failed
4a883b2
Wed 24 Apr 2024 07:42:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
77e8931
Wed 24 Apr 2024 07:54:51 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:42:1: error: expected identifier or ‘(’ before ‘{’ token
   42 | {
      | ^
Compilation failed
baf0467
Wed 24 Apr 2024 07:56:12 PM UTC: 
 hashmap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
d3f23d7
Wed 24 Apr 2024 07:56:24 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|5
total_score: 20/70
d3f23d7
Wed 24 Apr 2024 07:56:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8b2973c
Wed 24 Apr 2024 08:02:02 PM UTC: 
 hashmap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:66: error: expected ‘)’ before ‘;’ token
   71 |   map->buckets = (Pair**)calloc(map->capacity * 2,sizeof(Pair **);
      |                                ~                                 ^
      |                                                                  )
hashmap.c:81:18: error: expected ‘;’ before ‘}’ token
   81 |   free(auxValor);
      |                  ^
      |                  ;
   82 | }
      | ~                 
hashmap.c:70:10: error: unused variable ‘auxValor’ [-Werror=unused-variable]
   70 |   Pair** auxValor=map->buckets;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
33f5c2e
Wed 24 Apr 2024 08:02:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
257e858
Wed 24 Apr 2024 08:56:29 PM UTC: 
 hashmap.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
b6deb8d
Wed 24 Apr 2024 08:57:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
6e357c1
Wed 24 Apr 2024 08:59:01 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  7|3
total_score: 40/70
4c64003
Wed 24 Apr 2024 09:01:26 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 40/70
36e26e4
Wed 24 Apr 2024 09:02:58 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 40/70
a9e0611
Wed 24 Apr 2024 09:03:19 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 40/70
772440b
Wed 24 Apr 2024 09:03:38 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 40/70
6f9cb45
Wed 24 Apr 2024 09:07:15 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
216fd66
Wed 24 Apr 2024 09:09:55 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
7293595
Wed 24 Apr 2024 09:11:40 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
5cdbddc
Wed 24 Apr 2024 09:11:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
346c696
Wed 24 Apr 2024 09:12:14 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  7|3
total_score: 40/70
9a3b7f9
Wed 24 Apr 2024 09:12:30 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
7c36ee7
Wed 24 Apr 2024 09:14:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
c695f89
Wed 24 Apr 2024 09:14:28 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|3
total_score: 40/70
4e470af
Wed 24 Apr 2024 09:15:33 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 40/70
0be451c
Wed 24 Apr 2024 09:16:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 40/70
20e8b21
Wed 24 Apr 2024 09:18:59 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|3
total_score: 40/70
7360803
Wed 24 Apr 2024 09:21:13 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|3
total_score: 40/70
4de16cd
Wed 24 Apr 2024 09:21:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
0cb62a0
Wed 24 Apr 2024 09:22:09 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|3
total_score: 40/70
6ca94b8
Wed 24 Apr 2024 09:22:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
3b265fd
Wed 24 Apr 2024 09:24:14 PM UTC: 
 hashmap.c | 10 ----------
 1 file changed, 10 deletions(-)
In file included from test.c:4:
hashmap.c:108:1: error: expected identifier or ‘(’ before ‘}’ token
  108 | }
      | ^
Compilation failed
d2b480a
